# fontmatrix

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile  README  README.md  TODO  debian-ubuntu-install.txt  fontmatrix.1  fontmatrix.desktop  typotek.desktop  typotek.spec
cmake/modules/: FREETYPEConfig.cmake  FindICU.cmake  FindLIBPODOFO.cmake  FindM17N.cmake  OwnIngestOSXBundleLibraries.cmake
dodict/: CMakeLists.txt  dodict.cpp
harfbuzz/: AUTHORS  README
harfbuzz/src/: CMakeLists.txt  Makefile.am  harfbuzz-buffer.c  harfbuzz-external.h  harfbuzz-gdef-private.h  harfbuzz-gdef.c  harfbuzz-gdef.h  harfbuzz-global.h  harfbuzz-gpos-private.h  harfbuzz-gpos.c  harfbuzz-gpos.h  harfbuzz-gsub-private.h  harfbuzz-gsub.c  harfbuzz-gsub.h  harfbuzz-impl.c  harfbuzz-impl.h  harfbuzz-indic.cpp  harfbuzz-open-private.h  harfbuzz-open.c  harfbuzz-open.h  harfbuzz-shaper-all.cpp  harfbuzz-shaper.cpp  harfbuzz-shaper.h  harfbuzz-stream-private.h  harfbuzz-stream.c  harfbuzz-stream.h  harfbuzz-thai.cpp  harfbuzz.h
help/: CMakeLists.txt  README  TODO  help_en.html  help_fr.html  help_ru.html  helpbase.css
help/en/: CMakeLists.txt  additional.html  additional_db_check.html  additional_editing_panose.html  additional_export_for_packaging.html  additional_extracting fonts.html  additional_extracting_fonts.html  additional_ttf_tables.html  basics.html  comparisons.html  comparisons_fonts.html  comparisons_glyphs.html  contributing.html  contributing_programming.html  contributing_testing.html  contributing_translating.html  creating_font_books.html  export_fonts.html  external_tools.html  font_book_templates.html  font_books.html  index.html  interface.html  management.html  management_activation.html  management_importing.html  management_tags.html  managing.html  menu.xml  news.html  output.html  printing_fonts.html  readme.html  resources.html  scripting.html  search.html  search_in_generic_metadata.html  search_in_panose.html  search_using_bitmap_samples.html  setting_up.html  (+16 more)
help/fi/: CMakeLists.txt  index.html
help/fr/: CMakeLists.txt
help/hi/: CMakeLists.txt
help/nb/: CMakeLists.txt  style.css
help/no/: CMakeLists.txt  menu.xml  readme.html
help/ru/: CMakeLists.txt
help/sr/: CMakeLists.txt  Makefile
help/sv/: CMakeLists.txt
help/uk/: CMakeLists.txt
help/zh_CN/: CMakeLists.txt  menu.xml
help/zh_TW/: CMakeLists.txt
pythonqt/src/: CMakeLists.txt  PythonQt.cpp  PythonQtImporter.cpp  PythonQtSlot.cpp
samples/: CMakeLists.txt  CREDITS
samples/bn/: CMakeLists.txt  sample
samples/de/: CMakeLists.txt  sample
samples/fr/: CMakeLists.txt  Mamere
samples/gu/: CMakeLists.txt  sample
samples/he/: CMakeLists.txt  sample
samples/hi/: CMakeLists.txt  sample
samples/kn/: CMakeLists.txt  sample
samples/ml/: CMakeLists.txt  sample
samples/mr/: sample
samples/or/: CMakeLists.txt  sample
samples/pa/: CMakeLists.txt  sample
samples/ru/: CMakeLists.txt  Гоголь
samples/ta/: CMakeLists.txt  sample
samples/te/: CMakeLists.txt  sample
samples/udm/: CMakeLists.txt  sample
src/: CMakeLists.txt  QHexView.cpp  QHexView.h  about.ui  aboutwidget.cpp  aboutwidget.h  activationreportdialog.ui  activationwidget.cpp  activationwidget.h  activationwidget.ui  activationwidgetitem.cpp  activationwidgetitem.h  activationwidgetitem.ui  altselectorwidget.ui  application.qrc  bookexport.ui  browserwidget.cpp  browserwidget.h  browserwidget.ui  chartwidget.cpp  chartwidget.h  chartwidget.ui  comparewidget.ui  dataexport.cpp  dataexport.h  dataexport.ui  dataloader.cpp  dataloader.h  dumpdialog.cpp  dumpdialog.h  dumpdialog.ui  familywidget.cpp  familywidget.h  familywidget.ui  fileopen.xpm  filterbar.cpp  filterbar.h  filterbar.ui  filterdata.cpp  filterdata.h  (+226 more)
src/graphic-resources/: fontbook_default.xml  fontmatrix-AA.xcf  fontmatrix-zoom.xcf  fontmatrix.icns  info.css  info.html  one_line_template.xml  template_default.xml  template_oneline.xml
src/graphic-resources/html-css/: fontmatrix.js  info.css
src/hyphenate/: CMakeLists.txt  fmhyphenator.cpp  fmhyphenator.h  hyphen.c
src/langs/: CMakeLists.txt  deva.dict  deva.match  dodict.cpp  latn.dict  latn.match  test.match
src/langs/unicode/: Blocks-fr.txt  Blocks.txt  BlocksToCpp.awk  COPYING  frblockstots.awk  uniblocks.cxx
src/messages/: CMakeLists.txt  about.html  about_cs.html  about_de.html  about_fi.html  about_fr.html  about_people.html  about_ru.html  about_uk.html  fmlocales.h  fontmatrix-cs.ts  fontmatrix-da.ts  fontmatrix-de.ts  fontmatrix-en.ts  fontmatrix-fi.ts  fontmatrix-fr.ts  fontmatrix-hi.ts  fontmatrix-nb.ts  fontmatrix-nl.ts  fontmatrix-no.ts  fontmatrix-ru.ts  fontmatrix-sr.ts  fontmatrix-sv.ts  fontmatrix-uk.ts  fontmatrix-zh_CN.ts  fontmatrix-zh_TW.ts  fontmatrix_da.qm  fontmatrix_da.ts  fontmatrix_de.qm  fontmatrix_de.ts  fontmatrix_en.qm  fontmatrix_en.ts  fontmatrix_fi.qm  fontmatrix_fi.ts  fontmatrix_fr.qm  fontmatrix_fr.ts  fontmatrix_hi.ts  fontmatrix_nb.qm  fontmatrix_nb.ts  fontmatrix_nl.qm  (+28 more)
src/scripts/: CMakeLists.txt  fontforge_subset.py  fonttools_showxml.py  import_tags.py  xetex_fontbook.py
