## Help ##

# Now it’s just a matter of maintaining a list of all
# needed files, when releasing - pm

SET(FM_HELP_DIR ${CMAKE_SOURCE_DIR}/help/)

ADD_SUBDIRECTORY(${FM_HELP_DIR}en)
ADD_SUBDIRECTORY(${FM_HELP_DIR}fi)
ADD_SUBDIRECTORY(${FM_HELP_DIR}fr)
ADD_SUBDIRECTORY(${FM_HELP_DIR}hi)
ADD_SUBDIRECTORY(${FM_HELP_DIR}nb)
ADD_SUBDIRECTORY(${FM_HELP_DIR}no)
ADD_SUBDIRECTORY(${FM_HELP_DIR}ru)
ADD_SUBDIRECTORY(${FM_HELP_DIR}sr)
ADD_SUBDIRECTORY(${FM_HELP_DIR}sv)
ADD_SUBDIRECTORY(${FM_HELP_DIR}uk)
ADD_SUBDIRECTORY(${FM_HELP_DIR}zh_CN)
ADD_SUBDIRECTORY(${FM_HELP_DIR}zh_TW)
